--- a/configs/train_ablation_img768.yaml
+++ b/configs/train_ablation_img768.yaml
@@ -1,24 +1,33 @@
-# Ablation resolusi 768 (E3b)
+# Ablation resolusi 768 (E3b) - bandingkan dengan baseline coco128 (640)
 model: yolo11s.pt
-data: configs/data_coco_subset.yaml
-epochs: 50
-imgsz: 768
-batch: 12
-workers: 8
+data: coco128.yaml   # tetap pakai dataset kecil bawaan Ultralytics
+
+# Training
+epochs: 40           
+imgsz: 768         
+batch: 4            
+workers: 2           
 device: 0
+
 optimizer: SGD
 lr0: 0.01
 lrf: 0.1
 momentum: 0.937
 weight_decay: 0.0005
+
 warmup_epochs: 3.0
 warmup_momentum: 0.8
 warmup_bias_lr: 0.1
+
+# Loss & behaviour
 box: 7.5
 cls: 0.5
-ema: True
-cos_lr: False
+dfl: 1.5
+
+cos_lr: false
 patience: 10
+
+# Augmentasi sama seperti baseline default (supaya fair)
 hsv_h: 0.015
 hsv_s: 0.7
 hsv_v: 0.4
@@ -29,8 +38,11 @@ shear: 0.0
 perspective: 0.0
 flipud: 0.0
 fliplr: 0.5
+
 mosaic: 0.7
 mixup: 0.05
 copy_paste: 0.0
-amp: True
-cache: False
+
+amp: true
+cache: false        
+seed: 42
