--- a/configs/train_advanced.yaml
+++ b/configs/train_advanced.yaml
@@ -1,37 +1,57 @@
-# Eksperimen advanced (E2) dengan bag-of-freebies
-model: yolo11m.pt
-data: configs/data_coco_subset.yaml
+# ==========================================
+# FINAL OPTIMIZED - YOLO11m + coco128 (RTX 3050 Safe)
+# ==========================================
+
+model: yolo11m.pt 
+data: coco128.yaml
+
+# Training
 epochs: 100
 imgsz: 640
-batch: 16
-workers: 8
+batch: 8         
+workers: 2
 device: 0
-optimizer: SGD
-lr0: 0.01
-lrf: 0.05
-momentum: 0.949
-weight_decay: 0.0005
-warmup_epochs: 5.0
-warmup_momentum: 0.85
-warmup_bias_lr: 0.2
+
+# Optimizer (AdamW is King for small data/fast convergence)
+optimizer: AdamW
+lr0: 0.0025        
+lrf: 0.01          
+momentum: 0.9
+weight_decay: 0.05 
+
+warmup_epochs: 3.0 
+warmup_momentum: 0.8
+warmup_bias_lr: 0.1
+
+# Loss gains (Meningkatkan fokus pada deteksi kotak)
 box: 7.5
-cls: 0.6
-ema: True
-cos_lr: True
-patience: 15
-hsv_h: 0.02
-hsv_s: 0.8
-hsv_v: 0.5
-degrees: 5.0
-translate: 0.2
-scale: 0.7
-shear: 2.0
-perspective: 0.0008
-flipud: 0.0
-fliplr: 0.5
-mosaic: 1.0
-mixup: 0.15
+cls: 0.5
+dfl: 1.5
+patience: 30       
+
+# Augmentasi (Balanced for Small Data)
+hsv_h: 0.015
+hsv_s: 0.7
+hsv_v: 0.4
+degrees: 0.0       
+translate: 0.1    
+scale: 0.5
+shear: 0.0
+perspective: 0.0
+
+# Mosaic & Mixup (Critical for Stability)
+mosaic: 1.0        
+mixup: 0.1         
 copy_paste: 0.1
 auto_augment: randaugment
+erasing: 0.4
+
+# Scheduler
+cos_lr: True
+close_mosaic: 10   
+multi_scale: False 
+
+# System
+plots: True
+cache: false        
 amp: True
-cache: ram
