--- a/configs/train_baseline.yaml
+++ b/configs/train_baseline.yaml
@@ -1,24 +1,34 @@
-# Eksperimen baseline (E1)
+# ==========================
+# BASELINE (E1) - YOLO11s + coco128
+# Fokus: config simple, stabil, dan jadi pembanding utama advanced
+# ==========================
+
 model: yolo11s.pt
-data: configs/data_coco_subset.yaml
-epochs: 50
-imgsz: 640
-batch: 16
-workers: 8
+data: coco128.yaml
+
+# Training
+epochs: 60         
+batch: 8            
+workers: 2          
 device: 0
+
 optimizer: SGD
 lr0: 0.01
 lrf: 0.1
 momentum: 0.937
 weight_decay: 0.0005
+
 warmup_epochs: 3.0
 warmup_momentum: 0.8
 warmup_bias_lr: 0.1
+
+# Loss & training behaviour
 box: 7.5
 cls: 0.5
-ema: True
-cos_lr: False
-patience: 10
+dfl: 1.5               
+patience: 10           
+
+# Augmentasi (moderate)
 hsv_h: 0.015
 hsv_s: 0.7
 hsv_v: 0.4
@@ -29,8 +39,21 @@ shear: 0.0
 perspective: 0.0
 flipud: 0.0
 fliplr: 0.5
+
 mosaic: 0.7
 mixup: 0.05
 copy_paste: 0.0
-amp: True
+auto_augment: None
+
+erasing: 0.4
+cutmix: 0.0
+
+# Lainnya
 cache: False
+close_mosaic: 10       
+multi_scale: False
+seed: 42
+deterministic: True
+amp: True
+plots: True
+save_period: -1
